[tool.poetry]
name = "mvc-flask"
version = "2.4.0"
description = "turn standard Flask into mvc"
authors = ["Marcus Pereira <marcus@negros.dev>"]

readme = "README.md"
license = "MIT"
keywords = ["flask", "flask extensions", "flask mvc", "flask-mvc", "mvc flask", "flask design pattern"]

repository = "https://github.com/marcuxyz/mvc_flask"
homepage = "https://github.com/marcuxyz/mvc_flask"


[tool.poetry.dependencies]
python = ">=3.6.2,<4.0.0"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
ward = "^0.65.0-beta.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ward]
progress-style = ["bar"]